<resources>
    <string name="app_name">EELiu</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="superior_hint">商家邀请码</string>
    <string name="input_phone_number">输入账号</string>
    <string name="input_pwd">输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="user_count">请输入要兑换的积分数量</string>
    <string name="exchange">一元夺宝</string>
    <string name="home">首页</string>
    <string name="personal">个人中心</string>
    <string name="alipay_user">支付宝账号</string>
    <string name="alipay_name">收款人姓名</string>
    <string name="exchange_now">立即兑换</string>
    <string name="charge_phone_number">输入要充值的手机号</string>
    <string name="click_login">点击登录</string>
    <string name="register_tips">注册即送一元夺宝币</string>
    <string name="personal_file">个人资料</string>
    <string name="nick_name">昵称</string>
    <string name="user_header">头像</string>
    <string name="personal_phone">手机号</string>
    <string name="address">收货地址</string>
    <string name="exit_login">退出登录</string>
    <string name="goods_state">商品状态</string>
    <string name="confirm">确定</string>
    <string name="pay_now">立即支付</string>
    <string name="mymessage">我的消息</string>
    <string name="exchange_hisstory">兑换记录</string>
    <string name="store_exchage">积分兑换</string>
    <string name="my_friends">我的好友</string>
    <string name="about_eliu">关于E流</string>
    <string name="check_update">检查更新</string>
    <string name="get_code">获取验证码</string>
    <string name="add_friend">添加好友</string>
    <string name="add_contact">添加手机联系人</string>
    <string name="cancel">取消</string>
    <string name="contact_number">联系人电话</string>
    <string name="contact_name">联系人名字</string>
    <string name="my_indiana">我的夺宝</string>
    <string name="show_forms_share">晒单分享</string>
    <string name="indiana_roules">夺宝规则</string>

</resources>
