<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/dp20"
    android:layout_marginRight="@dimen/dp20"
    android:orientation="vertical">

    <com.example.clearedittext.ClearEditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name" />

    <com.example.clearedittext.ClearEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password" />

    <com.example.clearedittext.ClearEditText
        android:id="@+id/superior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/superior_hint" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:text="@string/register"
            android:textSize="20sp" />

    </RelativeLayout>
</LinearLayout>