<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="添加好友"
        android:layout_margin="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:textSize="20sp"
        />
    <com.example.clearedittext.ClearEditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_number"
        android:inputType="phone"
        />
    <com.example.clearedittext.ClearEditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_name"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/confirm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/add_friend"
            style="@style/exchange_textview_style"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/cancel"
            android:text="@string/cancel"
            style="@style/exchange_textview_style"
            />
    </LinearLayout>
</LinearLayout>