<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="30dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_stroke_shape"
        >
        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_phone_number"
            android:inputType="phone"
            android:background="@null"
            android:padding="10dp"
            android:text="15136205347"
            />
        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/huise_ziti"
            android:layout_below="@id/phone_number"
            />
        <EditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_pwd"
            android:background="@null"
            android:layout_below="@id/line"
            android:padding="10dp"
            android:inputType="textPassword"
            android:text="111111"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/longin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/textview_style"
            android:gravity="center"
            android:text="@string/login"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/qian_jing_se"
            />
        <TextView
            android:id="@+id/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/orange_textview"
            android:gravity="center"
            android:text="@string/register"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/qian_jing_se"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/forget_pwd"
            android:padding="10dp"
            android:textColor="@color/blue"
            android:layout_marginTop="20dp"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>

</LinearLayout>
