<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="30dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/corner_stroke_shape"
        >
        <EditText
            android:id="@+id/user_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_phone_number"
            android:inputType="phone"
            android:background="@null"
            android:padding="10dp"
            />
        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/huise_ziti"
            />
        <EditText
            android:id="@+id/user_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_count"
            android:background="@null"
            android:padding="10dp"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/exchange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exchange"
        android:background="@drawable/textview_style"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exchange"
        android:background="@drawable/textview_style"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

</LinearLayout>