<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <LinearLayout
      android:id="@+id/container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_margin="10dp"
      >
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="支付宝兑换"
          />
      <com.example.clearedittext.ClearEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/alipay_user"
          android:background="@drawable/corner_stroke_shape"
          />
      <com.example.clearedittext.ClearEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/alipay_name"
          android:background="@drawable/corner_stroke_shape"
          />
      <RadioGroup
          android:id="@+id/ali_rg"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          >
          <RadioButton
              android:id="@+id/fifty"
              style="@style/exchange_radiobutton_style"
              android:text="50元"
              />
          <RadioButton
              android:id="@+id/hundred"
              style="@style/exchange_radiobutton_style"
              android:text="100元"
              />
          <RadioButton
              android:id="@+id/five_hundred"
              style="@style/exchange_radiobutton_style"
              android:text="500元"
              />
      </RadioGroup>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="共需支付"
          android:textSize="18sp"
          android:layout_marginTop="20dp"
          android:layout_marginBottom="10dp"
          />
      <TextView
          android:id="@+id/exchange_now"
          android:text="@string/exchange_now"
          style="@style/exchange_textview_style"
          />
  </LinearLayout>
</ScrollView>