<?xml version="1.0" encoding="utf-8"?>
<!--做出一个可折叠的toolbar 必须做到以下三点
    1，coordiantorlayout 作为父容器的布局
    2，给需要滑动的组件设置 layout_behavior
    3，collapsingtoolbarlayout 包含一个imageview 和 toolbar
-->
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >
    <!--appbar layout 新的android appbarlayout-->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
        <!--包含一个可折叠的toolbarlayout
        layout_scrollFlags
        scroll 若想让toolbar 滚动就必须设置这个属性
        enterAlways  向下移动时 立即显示view
        exitUntilCollapsed  向上移动时 收缩view 但可以固定toolbar 在上面
        enterAlwaysCollapsed 当你的View已经设置minHeight属性又使用此标志时，你的View只能以最小高度进入，只有当滚动视图到达顶部时才扩大到完整高度
        -->
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collap_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            >
            <!--layout_collapseMode 1，pin 没有视觉差！ 2，parallax  有视觉差   可以配合layout_collapseParallaxMultiplier 视觉差因子 设置  val  0-1-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/splash"
                app:layout_collapseParallaxMultiplier="0.7"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                android:visibility="gone"
                />

            <!--toolbar-->
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                >
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_stroke_shape"
                >
                <com.example.clearedittext.ClearEditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_phone_number"
                    android:inputType="phone"
                    android:background="@null"
                    android:padding="10dp"
                    android:text="15136205311"
                    />
                <View
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/huise_ziti"
                    android:layout_below="@id/phone_number"
                    />

                <RelativeLayout
                    android:id="@+id/code_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/line"
                    >
                    <com.example.clearedittext.ClearEditText
                        android:id="@+id/verify_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_pwd"
                        android:background="@null"
                        android:padding="10dp"
                        android:inputType="number"
                        android:text="000000"
                        android:layout_toLeftOf="@+id/get_code"
                        android:layout_alignParentLeft="true"
                        />
                    <TextView
                        android:id="@+id/get_code"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/get_code"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentTop="true"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:layout_centerVertical="true"
                        />
                </RelativeLayout>
                <View
                    android:id="@+id/line2"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/huise_ziti"
                    android:layout_below="@id/code_container"
                    />
                <com.example.clearedittext.ClearEditText
                    android:id="@+id/pwd1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_pwd"
                    android:background="@null"
                    android:layout_below="@id/line2"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:text="000000"
                    />
                <View
                    android:id="@+id/line3"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/huise_ziti"
                    android:layout_below="@id/pwd1"
                    />
                <com.example.clearedittext.ClearEditText
                    android:id="@+id/pwd2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_pwd"
                    android:background="@null"
                    android:layout_below="@id/line3"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:text="000000"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/confirm"
                    android:text="@string/confirm"
                    style="@style/exchange_textview_style"
                    />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/forget_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/forget_pwd"
                    android:padding="10dp"
                    android:textColor="@color/blue"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>